--- a/main.css
+++ b/main.css
@@ -1,14 +1,29 @@
 body {
-  background-color: lightblue;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  width: 100vh;
+  height: 100vh;
+  background-image: radial-gradient(ellipse farthest-corner at 50% 50% , #44a39b 10%, rgb(160, 212, 55) 50%, #a3d9FF 95%);
+
 }
 
 .container {
-  width: 100%;
-  height: 1000px;
-  background-color: red;
+  height: auto;
+}
+
+.clock-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  /*transform: translateX(-50%) translateY(-50%);*/
+  transform: translate(-50%, -50%);
+}
+
+.clock {
+  text-align:center;
+  font-size: 120px;
+  font-family: 'Caveat Brush', sans-serif;
 }
 
 .hours:after,
@@ -16,16 +31,9 @@ body {
   content: ':'
 }
 
-.clock {
-  text-align: center;
-  font-size: 72px;
-  font-family: sans-serif;
-  padding-top: 100px;
-}
-
 hr {
   margin-top: 20px;
-  height: 10px;
-  background-color: red;
+  height: 1px;
+  background-color: black;
   border: 0;
 }
